--- a/cards.html
+++ b/cards.html
@@ -361,70 +361,93 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Cards</h1>
+                        <h1 class="h3 mb-0 text-gray-800">SALES ORDERS</h1>
                     </div>
 
                     <div class="row">
 
-                        <!-- Earnings (Monthly) Card Example -->
+                        <!-- ORDER 1 CARD -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
+                            <div class="card border-left-primary shadow h-80 py-1">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Earnings (Monthly)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                                Order 1</div>
+                                            <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center",
+                                             style="position: absolute; top: -10px; right: 10px"
+                                                data-toggle="collapse"
+                                                data-target="#salesInfo" aria-expanded="true">
+                                                <span class="infoIcon">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                </span>
+                                            </button> 
+                                                <div class="collapse" id="salesInfo"> 
+                                                    <div class="py-10 collapse-inner rounded">  
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch requests:</h6><br>
+                                                        <a class="collapse-item" href="salesDetails.html">Proceed</a>
+                                                    </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Earnings (Annual) Card Example -->
+                        <!-- ORDER 2 CARD -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
+                            <div class="card border-left-success shadow h-80 py-1">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Earnings (Annual)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                                Order 2</div>
+                                            <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center"
+                                                 style="position: absolute; top: -10px; right: 10px"
+                                                 data-toggle="collapse"
+                                                 data-target="#salesInfo" aria-expanded="true">
+                                                <span class="infoIcon">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                </span>    
+                                            </button>
+                                                <div class="collapse" id="salesInfo">
+                                                    <div class="py-10 collapse-inner rounded">
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch Requests:</h6><br>
+                                                        <a class="collapse-item" href="salesDetails.html">Proceed</a>
+                                                    </div>
+                                                </div>        
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Tasks Card Example -->
+                        <!-- ORDER 3 CARD -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
+                            <div class="card border-left-info shadow h-80 py-1">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
-                                            </div>
-                                            <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                                Order 3</div>
+                                            <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center"
+                                                style="position: absolute; top: -10px; right: 10px"
+                                                data-toggle="collapse"
+                                                data-target="#salesInfo" aria-expanded="true">
+                                                <span class="infoIcon">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                </span>
+                                            </button>
+                                            <div class="collapse" id="salesInfo">
+                                                <div class="py-10 collapse-inner rounded">
+                                                    <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
+                                                    <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6><br>
+                                                    <a class="collapse-item" href="salesDetails3.html">Proceed</a>
                                                 </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
