--- a/cards.html
+++ b/cards.html
@@ -377,12 +377,12 @@
                                             <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center",
                                              style="position: absolute; top: -10px; right: 10px"
                                                 data-toggle="collapse"
-                                                data-target="#salesInfo" aria-expanded="true">
+                                                data-target="#salesInfo1" aria-expanded="true">
                                                 <span class="infoIcon">
                                                     <i class="fa fa-chevron-down"></i>
                                                 </span>
                                             </button> 
-                                                <div class="collapse" id="salesInfo"> 
+                                                <div class="collapse" id="salesInfo1"> 
                                                     <div class="py-10 collapse-inner rounded">  
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch requests:</h6><br>
@@ -406,12 +406,12 @@
                                             <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center"
                                                  style="position: absolute; top: -10px; right: 10px"
                                                  data-toggle="collapse"
-                                                 data-target="#salesInfo" aria-expanded="true">
+                                                 data-target="#salesInfo2" aria-expanded="true">
                                                 <span class="infoIcon">
                                                     <i class="fa fa-chevron-down"></i>
                                                 </span>    
                                             </button>
-                                                <div class="collapse" id="salesInfo">
+                                                <div class="collapse" id="salesInfo2">
                                                     <div class="py-10 collapse-inner rounded">
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch Requests:</h6><br>
@@ -436,12 +436,12 @@
                                             <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center"
                                                 style="position: absolute; top: -10px; right: 10px"
                                                 data-toggle="collapse"
-                                                data-target="#salesInfo" aria-expanded="true">
+                                                data-target="#salesInfo3" aria-expanded="true">
                                                 <span class="infoIcon">
                                                     <i class="fa fa-chevron-down"></i>
                                                 </span>
                                             </button>
-                                            <div class="collapse" id="salesInfo">
+                                            <div class="collapse" id="salesInfo3">
                                                 <div class="py-10 collapse-inner rounded">
                                                     <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
                                                     <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6><br>
@@ -454,24 +454,35 @@
                             </div>
                         </div>
 
-                        <!-- Pending Requests Card Example -->
+                        <!-- ORDER 4 CARD -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card border-left-warning shadow h-80 py-1">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                                Order 4</div>
+                                            <button class="d-flex btn btn-warning position-absolute rounded-pill justify-content-center"
+                                                style="position: absolute; top: -10px; right: 10px"
+                                                data-toggle="collapse"
+                                                data-target="#salesInfo4" aria-expanded="true">
+                                                <span class="infoIcon">
+                                                    <i class="fa fa-chevron-down"></i>
+                                                    </span>
+                                                </button>
+                                                <div class="collapse" id="salesInfo4">
+                                                    <div class="py-10 collapse-inner rounded">
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
+                                                        <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6><br>
+                                                        <a class="collapse-item" href="salesDetails4.html">Proceed</a>
+                                                    </div>
+                                                </div>
+                                            </div>    
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
                     <div class="row">
 
