--- a/cards.html
+++ b/cards.html
@@ -386,7 +386,7 @@
                                                     <div class="py-10 collapse-inner rounded">  
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch requests:</h6><br>
-                                                        <a class="collapse-item" href="salesDetails.html">Proceed</a>
+                                                        <a class="collapse-item" href="salesDetails1.html">Proceed</a>
                                                     </div>
                                             </div>
                                         </div>
@@ -415,7 +415,7 @@
                                                     <div class="py-10 collapse-inner rounded">
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
                                                         <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch Requests:</h6><br>
-                                                        <a class="collapse-item" href="salesDetails.html">Proceed</a>
+                                                        <a class="collapse-item" href="salesDetails2.html">Proceed</a>
                                                     </div>
                                                 </div>        
 
