--- a/cards.html
+++ b/cards.html
@@ -275,7 +275,7 @@
                                             <div class="collapse" id="salesInfo3">
                                                 <div class="py-10 collapse-inner rounded">
                                                     <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6>
-                                                    <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Approval pending:</h6><br>
+                                                    <h6 class="collapse-item mb-0 font-weight-bold text-gray-800">Dispatch Requests:</h6><br>
                                                     <a class="collapse-item" href="salesDetails3.html">Proceed</a>
                                                 </div>
                                             </div>
