--- a/cards.html
+++ b/cards.html
@@ -161,7 +161,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <h5>SUNIL SPONGE</h5>
+                    <h3 class="text-xs font-weight-bold text-primary text-uppercase mb-0">SUNIL SPONGE</h3>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -178,7 +178,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img class="img-profile rounded-circle" src="img/2725164.png">
+                                <img class="img-profile rounded-circle" src="img/2725164.jpg">
                             </a>
                         </li>
 
