--- a/cards.html
+++ b/cards.html
@@ -161,7 +161,7 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <h3 class="text-xs font-weight-bold text-primary text-uppercase mb-0">SUNIL SPONGE</h3>
+                    <h3 class="text-sm font-weight-medium text-primary text-uppercase mb-0">SUNIL SPONGE</h3>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -178,7 +178,8 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img class="img-profile rounded-circle" src="img/2725164.jpg">
+                                <i class="fas fa-sync-alt fa-lg text-primary" style="color: #007bff;"></i>
+
                             </a>
                         </li>
 
@@ -192,7 +193,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">SALES ORDERS</h1>
+                        <h1 class="h4 mb-0 text-gray-900">SALES ORDERS</h1>
                     </div>
 
                     <div class="row">
@@ -290,7 +291,7 @@
                             <div class="card border-left-warning shadow h-80 py-1">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
+                                        <div class="col mr-1">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                                 Pending Requests
                                             </div>
@@ -327,7 +328,7 @@
             <!-- End of Main Content -->
 
             <!-- Footer -->
-            <footer class="sticky-footer bg-white">
+            <footer class="fixed-bottom bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         <span>Copyright &copy; Your Website 2020</span>
